2008-03-11 Sarka Todorova <sarka.todorova@cern.ch>
	* fix largest contribution to excessive memory consumption
	  ( standalone tag )
	* tagged as MuonTrackingGeometry-00-02-02

2008-02-21 Sarka Todorova <sarka.todorova@cern.ch>
	* switch to simpler default configuration (active material only, 2D partition)
	* tagged as MuonTrackingGeometry-00-02-01

2008-02-16 Andreas Salzburger < Andreas.Salzburger - at - cern.ch >
        * add signature
	* tagged as MuonTrackingGeometry-00-02-00

2008-02-15 Sarka Todorova <sarka.todorova@cern.ch>
	* define "MuonSpectrometerEntrance" volume in combined tracking geometry
	* tagged as MuonTrackingGeometry-00-01-10

2008-02-08 Sarka Todorova <sarka.todorova@cern.ch>
	* auppress printout of geometry volume tree
	* tagged as MuonTrackingGeometry-00-01-09

2008-01-31 Sarka Todorova <sarka.todorova@cern.ch>
	* fix the identification of CSC stations
	* tagged as MuonTrackingGeometry-00-01-08

2008-01-31 Sarka Todorova <sarka.todorova@cern.ch>
	* modify coding of secondary coordinate for stations with cutouts (BOG)
	* tagged as MuonTrackingGeometry-00-01-07

2008-01-29 Sarka Todorova <sarka.todorova@cern.ch>
	* don't retrieve TrackingVolumesSvc unless needed (suppress error messages)
	* tagged as MuonTrackingGeometry-00-01-06

2008-01-24 Sarka Todorova <sarka.todorova@cern.ch>
	* add option to load MSEntry from TrackingVolumesSvc
	* bugfix in MIMB (volume bounds called after delete )
	* tagged as MuonTrackingGeometry-00-01-05

2008-01-22 Sarka Todorova <sarka.todorova@cern.ch>
	* fix configuration python file
	* tagged as MuonTrackingGeometry-00-01-04

2008-01-21 Sarka Todorova <sarka.todorova@cern.ch>
	* configuration python file
	* tagged as MuonTrackingGeometry-00-01-03

2008-01-15 Sarka Todorova <sarka.todorova@cern.ch>
	* added configuration file; to be used both by muon-standalone and combined geometry
	* tagged as MuonTrackingGeometry-00-01-02

2008-01-09 Sarka Todorova <sarka.todorova@cern.ch>