@@ -1,4 +1,8 @@
 2008-03-11 Sarka Todorova <sarka.todorova@cern.ch>
+	* identical HepTransform replaced with 0 pointer in MIMB
+	* tagged as MuonTrackingGeometry-00-02-03
+
+2008-03-11 Sarka Todorova <sarka.todorova@cern.ch>
 	* fix largest contribution to excessive memory consumption
 	  ( standalone tag )
 	* tagged as MuonTrackingGeometry-00-02-02
